FHIR-49732 Discrepancy between "nolist" and "unlist" for CSS class name when styling XHTML

--- a/implementations/fhir-runtime.css
+++ b/implementations/fhir-runtime.css
@@ -19,3 +19,4 @@
 .circle { list-style-type : circle }
 .square { list-style-type: square }
 .nolist { list-style-type: none }
+.unlist { list-style-type: none }
