QA: Add fhir.ini section for R5 to R6 changes (and start of R4 to R6)

--- a/tools/templates/template-intf.html
+++ b/tools/templates/template-intf.html
@@ -32,7 +32,7 @@ Resource Content
   <ul>
     <li><a href="#tabs-struc">Structure</a></li>
     <li><a href="#tabs-uml">UML</a></li>
-    <li><a href="#tabs-diff">R4 Diff</a></li>
+    <li><a href="#tabs-diff">Version Diff</a></li>
     <li><a href="#tabs-all">All</a></li>
   </ul>
   <div id="tabs-struc">
