--- a/tools/templates/template.html
+++ b/tools/templates/template.html
@@ -39,7 +39,7 @@ Resource Content
     <li><a href="#tabs-xml">XML</a></li>
     <li><a href="#tabs-json">JSON</a></li>
     <li><a href="#tabs-ttl">Turtle</a></li>
-    <li><a href="#tabs-diff">R4 Diff</a></li>
+    <li><a href="#tabs-diff">Version Diff</a></li>
     <li><a href="#tabs-all">All</a></li>
   </ul>
   <div id="tabs-struc">
